# MtSync

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MARKETING.md  QWEN.md  README.md  SCAFFOLD.md  TODO.md  User_Manual.md
.github/workflows/: build.yaml
data/: com.mtsync.MtSync.desktop  com.saddle.Saddle.desktop  mtsync.gresource.xml  saddle.gresource.xml
packaging/: com.mtsync.MtSync.yml  com.saddle.Saddle.yml
snap/: snapcraft.yaml
src/: application.cpp  application.hpp  daemon.cpp  daemon.hpp  daemon_proxy.cpp  daemon_proxy.hpp  main.cpp  notification.cpp  notification.hpp  sandbox.hpp  settings.hpp  tray.cpp  tray.hpp  window.cpp  window.hpp
src/ipc/: client.cpp  client.hpp  protocol.hpp  server.cpp  server.hpp
src/rclone/: cron_utils.hpp  rclone_cli.cpp  rclone_cli.hpp  rclone_manager.hpp  rclone_path.hpp  rclone_rc.cpp  rclone_rc.hpp  rclone_types.hpp
src/views/: about_view.cpp  about_view.hpp  backend_edit_view.cpp  backend_edit_view.hpp  backends_view.cpp  backends_view.hpp  browser_view.cpp  browser_view.hpp  compare_dialog.cpp  compare_dialog.hpp  job_edit_dialog.cpp  job_edit_dialog.hpp  job_view.cpp  job_view.hpp  settings_view.cpp  settings_view.hpp  sync_edit_dialog.cpp  sync_edit_dialog.hpp  sync_view.cpp  sync_view.hpp
src/widgets/: adw_wrapper.hpp  browser_pane.cpp  browser_pane.hpp  file_row.cpp  file_row.hpp
